unpackaged/main/default/objects/ACHAlternatePayments__x/ACHAlternatePayments__x.object-meta.xml
<CustomObject>
    <description>ACHAlternatePayments</description>
    <externalDataSource>LeasePlus</externalDataSource>
    <externalName>ACHAlternatePayments</externalName>
    <label>ACHAlternatePayments</label>
    <pluralLabel>ACHAlternatePayments</pluralLabel>
</CustomObject>