unpackaged/main/default/objects/ACHAlternatePayments__x/fields/AchTranCode__c.field-meta.xml
<CustomField>
    <fullName>AchTranCode__c</fullName>
    <description>AchTranCode</description>
    <externalDeveloperName>AchTranCode</externalDeveloperName>
    <label>AchTranCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>