unpackaged/main/default/objects/ACHAlternatePayments__x/fields/AltPayerName__c.field-meta.xml
<CustomField>
    <fullName>AltPayerName__c</fullName>
    <description>AltPayerName</description>
    <externalDeveloperName>AltPayerName</externalDeveloperName>
    <label>AltPayerName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>