unpackaged/main/default/objects/ACHAlternatePayments__x/fields/AltStopDate__c.field-meta.xml
<CustomField>
    <fullName>AltStopDate__c</fullName>
    <description>AltStopDate</description>
    <externalDeveloperName>AltStopDate</externalDeveloperName>
    <label>AltStopDate</label>
    <type>DateTime</type>
</CustomField>