unpackaged/main/default/objects/ACHAlternatePayments__x/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment</description>
    <externalDeveloperName>Comment</externalDeveloperName>
    <label>Comment</label>
    <length>128</length>
    <type>Text</type>
</CustomField>