unpackaged/main/default/objects/ACHAlternatePayments__x/fields/ContractBillLocFlg__c.field-meta.xml
<CustomField>
    <fullName>ContractBillLocFlg__c</fullName>
    <description>ContractBillLocFlg</description>
    <externalDeveloperName>ContractBillLocFlg</externalDeveloperName>
    <label>ContractBillLocFlg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>