unpackaged/main/default/objects/ACHAlternatePayments__x/fields/CVLeaseCustomerVWs__c.field-meta.xml
<CustomField>
    <fullName>CVLeaseCustomerVWs__c</fullName>
    <externalDeveloperName>CustIdNum</externalDeveloperName>
    <label>LP Customer Id</label>
    <length>255</length>
    <referenceTo>CVLeaseCustomerVWs__x</referenceTo>
    <relationshipLabel>LP ACH Payment Setup History</relationshipLabel>
    <relationshipName>ACHAlternatePayments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>