unpackaged/main/default/objects/ACHAlternatePayments__x/fields/DfiAcctNum__c.field-meta.xml
<CustomField>
    <fullName>DfiAcctNum__c</fullName>
    <description>DfiAcctNum</description>
    <externalDeveloperName>DfiAcctNum</externalDeveloperName>
    <label>Account Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>