unpackaged/main/default/objects/ACHAlternatePayments__x/fields/last_chg_oper__c.field-meta.xml
<CustomField>
    <fullName>last_chg_oper__c</fullName>
    <description>last_chg_oper</description>
    <externalDeveloperName>last_chg_oper</externalDeveloperName>
    <label>last_chg_oper</label>
    <length>128</length>
    <type>Text</type>
</CustomField>