unpackaged/main/default/objects/ACHAlternatePayments__x/fields/LeaseNum__c.field-meta.xml
<CustomField>
    <fullName>LeaseNum__c</fullName>
    <description>LeaseNum</description>
    <externalDeveloperName>LeaseNum</externalDeveloperName>
    <label>LeaseNum</label>
    <length>128</length>
    <type>Text</type>
</CustomField>