unpackaged/main/default/objects/ACHAlternatePayments__x/fields/NextPmtDate__c.field-meta.xml
<CustomField>
    <fullName>NextPmtDate__c</fullName>
    <description>NextPmtDate</description>
    <externalDeveloperName>NextPmtDate</externalDeveloperName>
    <label>Next Payment Date</label>
    <type>DateTime</type>
</CustomField>