unpackaged/main/default/objects/ACHAlternatePayments__x/fields/OrigBankNum__c.field-meta.xml
<CustomField>
    <fullName>OrigBankNum__c</fullName>
    <description>OrigBankNum</description>
    <externalDeveloperName>OrigBankNum</externalDeveloperName>
    <label>OrigBankNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>