unpackaged/main/default/objects/ACHAlternatePayments__x/fields/PmtAmount__c.field-meta.xml
<CustomField>
    <fullName>PmtAmount__c</fullName>
    <description>PmtAmount</description>
    <externalDeveloperName>PmtAmount</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>