unpackaged/main/default/objects/ACHAlternatePayments__x/fields/PmtFreq__c.field-meta.xml
<CustomField>
    <fullName>PmtFreq__c</fullName>
    <description>PmtFreq</description>
    <externalDeveloperName>PmtFreq</externalDeveloperName>
    <label>Frequency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>