unpackaged/main/default/objects/ACHAlternatePayments__x/fields/PmtMonth__c.field-meta.xml
<CustomField>
    <fullName>PmtMonth__c</fullName>
    <description>PmtMonth</description>
    <externalDeveloperName>PmtMonth</externalDeveloperName>
    <label>PmtMonth</label>
    <length>128</length>
    <type>Text</type>
</CustomField>