unpackaged/main/default/objects/ACHAlternatePayments__x/fields/PmtRemain__c.field-meta.xml
<CustomField>
    <fullName>PmtRemain__c</fullName>
    <description>PmtRemain</description>
    <externalDeveloperName>PmtRemain</externalDeveloperName>
    <label>Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>