unpackaged/main/default/objects/ACHAlternatePayments__x/fields/PmtType__c.field-meta.xml
<CustomField>
    <fullName>PmtType__c</fullName>
    <description>PmtType</description>
    <externalDeveloperName>PmtType</externalDeveloperName>
    <label>PmtType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>