unpackaged/main/default/objects/ACHAlternatePayments__x/fields/StandEntryClass__c.field-meta.xml
<CustomField>
    <fullName>StandEntryClass__c</fullName>
    <description>StandEntryClass</description>
    <externalDeveloperName>StandEntryClass</externalDeveloperName>
    <label>StandEntryClass</label>
    <length>128</length>
    <type>Text</type>
</CustomField>