unpackaged/main/default/objects/ACHAlternatePayments__x/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>StartDate</description>
    <externalDeveloperName>StartDate</externalDeveloperName>
    <label>StartDate</label>
    <type>DateTime</type>
</CustomField>