unpackaged/main/default/objects/ACHAlternatePayments__x/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>TransactionType</description>
    <externalDeveloperName>TransactionType</externalDeveloperName>
    <label>Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>